kubernetes/apps/network/coolercontrol/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coolercontrol
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress-int.greyrock.io
spec:
  hostnames:
    - coolercontrol.greyrock.io
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: coolercontrol
      matches:
        - path:
            type: PathPrefix
            value: /
